--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,4 +21,6 @@
   {% endcapture %}
   {{ include_to_scssify | scssify }}
   </style>
+  <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/vi_VN/sdk.js#xfbml=1&version=v9.0" nonce="3xdbnRvk"></script>
 </head>
