--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -43,7 +43,7 @@ layout: default
           {{ content }}
         </div>
 		
-		<div class="fb-comments" data-href="https://developers.facebook.com/docs/plugins/comments#configurator" data-width="" data-numposts="5"></div>
+		<div class="fb-comments" data-href="{{ page.url}}" data-width="" data-numposts="5"></div>
         
         <div class="post__share">
           <div class="share__head">
