--- a/_sass/4-layouts/_post.scss
+++ b/_sass/4-layouts/_post.scss
@@ -1,8 +1,6 @@
 /* Post */
-body.plugin {
-
-background-color: #f5f6f7 !important;
-
+.fb-comments, .fb-comments > * {
+    background-color: #FFF !important;
 }
 
 .post {
