--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -33,12 +33,12 @@ $base-font-size: 18px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Josefin Sans', sans-serif;
+$base-font-family: 'Lexend deca', sans-serif;
 $base-line-height: 1.7;
 
 // Headings
 $heading-font-weight: 700;
-$heading-font-family: 'Poppins', Arial, sans-serif; 
+$heading-font-family: 'Lexend deca', Arial, sans-serif; 
 $heading-color: $text-color;
 
 $font-size-h1:  36px;
