--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -38,7 +38,7 @@ $base-line-height: 1.7;
 
 // Headings
 $heading-font-weight: 700;
-$heading-font-family: 'Lexend deca', Arial, sans-serif; 
+$heading-font-family: 'Lexend deca', sans-serif; 
 $heading-color: $text-color;
 
 $font-size-h1:  36px;
