--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -37,8 +37,8 @@ $base-font-family: 'Lexend deca', sans-serif;
 $base-line-height: 1.7;
 
 // Headings
-$heading-font-weight: 500;
-$heading-font-family: 'Crimson Pro', sans-serif; 
+$heading-font-weight: 600;
+$heading-font-family: 'Montserrat', sans-serif; 
 $heading-color: $text-color;
 
 $font-size-h1:  36px;
