--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -33,7 +33,8 @@ $base-font-size: 18px;
 $base-font-style: normal;
 $base-font-variant: normal;
 $base-font-weight: normal;
-$base-font-family: 'Lexend deca', sans-serif;
+// $base-font-family: 'Lexend deca', sans-serif;
+$base-font-family: 'Montserrat', sans-serif;
 $base-line-height: 1.7;
 
 // Headings
