--- a/_sass/0-settings/_variables.scss
+++ b/_sass/0-settings/_variables.scss
@@ -39,7 +39,7 @@ $base-line-height: 1.7;
 // Headings
 $heading-font-weight: 600;
 $heading-font-family: 'Montserrat', sans-serif;
-$heading-font-src: url("../fonts/Montserrat/Montserrat-SemiBold.ttf"); 
+// $heading-font-src: url("../fonts/Montserrat/Montserrat-SemiBold.ttf"); 
 $heading-color: $text-color;
 
 $font-size-h1:  36px;
