--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -56,7 +56,7 @@ h4,
 h5,
 h6 {
   font-family: $heading-font-family;
-  src: $heading-font-src;
+  // src: $heading-font-src;
   font-weight: $heading-font-weight;
   line-height: $heading-line-height;
   color: $heading-color;
