--- a/_sass/2-base/_base.scss
+++ b/_sass/2-base/_base.scss
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+.message-input {
+	background-color: #e6e6e6 !important
+}
+
 body {
   font-family: $base-font-family;
   font-size: $base-font-size;
