--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -25,6 +25,12 @@
       </section>
       {% endif %}
     </div>
+	<div class="col col-12">
+		<section class="hero_twitter">
+			<a class="twitter-timeline" href="https://twitter.com/Real_dualeone?ref_src=twsrc%5Etfw">Tweets by Real_dualeone</a> 
+			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+		</section>
+	</div>
   </div>
 </div>
 <!-- begin hero -->
