--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -27,7 +27,7 @@
     </div>
 	<div class="col col-12">
 		<section class="hero_twitter">
-			<a class="twitter-timeline" href="https://twitter.com/Dualeone?ref_src=twsrc%5Etfw">Tweets by Dualeone</a>
+			<a class="twitter-timeline" data-width="1200" data-height="660" href="https://twitter.com/Dualeone?ref_src=twsrc%5Etfw">Tweets by Dualeone</a>
 			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</section>
 	</div>
